language/move-compiler/tests/move_check/unit_test/multiple_test_annotations.unit_test.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/unit_test/multiple_test_annotations.move:6:7
  │
5 │     #[test(_a=@0x1)]
  │       ---- Attribute previously given here
6 │     #[test(_b=@0x2)]
  │       ^^^^^^^^^^^^^ Duplicate attribute 'test' attached to the same item

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/unit_test/multiple_test_annotations.move:10:7
   │
 9 │     #[test]
   │       ---- Attribute previously given here
10 │     #[test(_a=@0x1, _b=@0x2)]
   │       ^^^^^^^^^^^^^^^^^^^^^^ Duplicate attribute 'test' attached to the same item

